Add support for eal RAG with pgvector
